force-app/main/default/objects/News__b/News__b.object-meta.xml
<CustomObject>
    <label>News</label>
    <pluralLabel>News</pluralLabel>
</CustomObject>