force-app/main/default/objects/News__b/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>