force-app/main/default/objects/News__b/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <label>Created</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>