force-app/main/default/objects/News__b/fields/ImageLink__c.field-meta.xml
<CustomField>
    <fullName>ImageLink__c</fullName>
    <label>ImageLink</label>
    <required>true</required>
    <type>Url</type>
</CustomField>