force-app/main/default/objects/News__b/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>